# charting-app

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  protocol-test.js
backend/: CMakeLists.txt
backend/include/: DrawCommand.hpp  Protocol.cpp  Protocol.hpp  RenderEngine.hpp
backend/include/generators/: CandleStickChartGenerator.hpp  ChartGeneratorFacctory.hpp  ChartGeneratorFactory.hpp  ChartSeriesGenerator.hpp  LineChartGenerator.hpp
backend/src/: Protocol.cpp  ProtocolTest.cpp  RenderEngine.cpp  main.cpp
backend/src/generators/: CandleStickChartGenerator.cpp  ChartGeneratorFactory.cpp  LineChartGenerator.cpp
data/: sample_data.json
frontend/: gen_sample_data.js  index.html  package.json  storybook.test.js  tsconfig.json
frontend/shaders/: fragment.glsl  vertex.glsl
frontend/src/: App.tsx  ThemeProvider.tsx  app.ts  index.tsx  theme.ts
frontend/src/components/: Button.tsx  ChartCanvas.tsx  ChartSubscriber.tsx  GlassCard.tsx  Input.tsx  ResizableChart.tsx  StreamControls.tsx  Tooltip.tsx
frontend/src/hooks/: useResizeObserver.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/renderers/: CandleStickChartRenderer.ts  ChartRenderer.ts  LineChartRenderer.ts  index.ts
frontend/src/styles/: animations.css
frontend/src/types/: protocol.d.ts
frontend/src/utils/: border.ts  scale.ts  time.ts  useResizeObserver.ts
